--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       PIHOLE_DNS_: "1.1.1.1;1.0.0.1" # cloudflare DNS
       DNSSEC: "true"
       WEBTHEME: "default-dark"
-      DNSMASQ_LISTENING: "local" # only listen to DNS requests on the local network (at most one hop away)
+      DNSMASQ_LISTENING: "all" # need to listen on all interfaces as we are on a docker network
       PIHOLE_DOMAIN: "pihole.birki.net" # set domain name here or comment out to use default
       WEBPASSWORD_FILE: /run/secrets/WEBPASSWORD_FILE
     secrets:
