--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   pihole:
     container_name: pihole
-    image: pihole/pihole:2022.10 # Date-based release that can receive bugfix updates
+    image: pihole/pihole:2022.11.2 # Date-based release
     ports:
       - "53:53/tcp"
       - "53:53/udp"
